--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "train": "nodemon train.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prac": "nodemon practice.js"
   },
   "author": "abu-mustafo",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "inquirer": "^8.2.6",
+    "mongodb": "^3.3.6",
     "nodemon": "^3.1.0"
   }
 }
