--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "inquirer": "^8.2.6",
+    "moment": "^2.30.1",
     "mongodb": "^3.3.6",
     "nodemon": "^3.1.0"
   }
